relocate demo and update CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(rpyfmm CXX)
 set(CMAKE_MODULE_PATH ${CMAKE_MOUDLE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3") 
+set(CMAKE_CXX_FLAGS_DEBUG "-Wall -O0 -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3") 
 
 include(DownloadProject) 
 
@@ -20,7 +20,6 @@ add_subdirectory(${dashmm_SOURCE_DIR} ${dashmm_BINARY_DIR})
 find_package(PkgConfig)
 pkg_search_module(HPX REQUIRED hpx)
 
-
 add_subdirectory(src)
 add_subdirectory(include)
-
+add_subdirectory(demo)
